# whisper.py

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release-bundles.yml  test.yml
packaging/: fetch_assets.py  whispr.spec  whispr_entry.py
tests/: test_diagnostics.py  test_diarization.py  test_editing.py  test_export.py  test_ocr.py  test_playback.py  test_project.py  test_resources.py  test_settings.py  test_transcription.py  test_translation.py
whisper/: __init__.py  decoding.py  timing.py  tokenizer.py  utils.py
whisper/normalizers/: basic.py
whispr/: __init__.py  app.py  diagnostics.py  diarization.py  editing.py  export.py  ocr.py  playback.py  project.py  resources.py  settings.py  transcription.py  translation.py
whispr/gui/: __init__.py  app.py  errors.py  transcribe_tab.py  transcript_view.py  translate_tab.py  widgets.py
