[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61.2" ]

[project]
name = "silvance-whisper"
description = "Robust Speech Recognition via Large-Scale Weak Supervision (Silvance fork of openai-whisper)"
readme.content-type = "text/markdown"
readme.file = "README.md"
license = { text = "MIT" }
authors = [ { name = "Silvance" }, { name = "OpenAI" } ]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "more-itertools",
  "numba",
  "numpy",
  "tiktoken",
  "torch",
  "tqdm",
  "triton>=2; (platform_machine=='x86_64' and sys_platform=='linux') or sys_platform=='linux2'",
]
optional-dependencies.dev = [ "mypy", "pytest", "pytest-cov", "ruff", "scipy" ]
# GUI / CPU-optimized transcription extras for the W.H.I.S.P.R. desktop app.
# tkinter ships with CPython; faster-whisper (CTranslate2) is the CPU backend.
optional-dependencies.gui = [ "faster-whisper", "ttkbootstrap", "sherpa-onnx" ]
# Build-time tooling for producing offline, air-gapped PyInstaller bundles.
optional-dependencies.bundle = [ "pyinstaller", "imageio-ffmpeg", "huggingface-hub" ]
# High-accuracy diarization backend (PyTorch-based; gated HF models). Preferred
# over sherpa-onnx for hard/low-quality audio when installed.
optional-dependencies.pyannote = [ "pyannote.audio" ]
urls = { Homepage = "https://github.com/silvance/whisper.py" }
scripts.whisper = "whisper.transcribe:cli"
scripts.whispr = "whispr.app:main"

[tool.setuptools]
py-modules = [ "whisper" ]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "whisper.version.__version__" }

[tool.setuptools.packages.find]
exclude = [ "tests*" ]
namespaces = false

[tool.ruff]
line-length = 88
target-version = "py39"
# The example notebooks are upstream Colab material (e.g. an intentional
# `import tensorflow` protobuf workaround); don't lint/format them.
extend-exclude = [ "notebooks" ]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort
select = [ "E", "F", "I", "W" ]
# E203 (whitespace before punctuation) conflicts with the formatter;
# E501 (line length) is enforced by the formatter instead.
ignore = [ "E203", "E501" ]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [ "F401" ]

[tool.ruff.lint.isort]
known-first-party = [ "whisper" ]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
# Triton kernel source is built from string templates with placeholder identifiers
# (e.g. LOAD_ALL_ROWS_HERE) that are not valid Python until substituted at runtime.
exclude = [ "whisper/triton_ops.py" ]

# Incremental typing backlog: these modules still have type errors inherited from
# upstream. mypy is enforced everywhere else (and on all new code); remove entries
# here as each module is annotated and made clean.
[[tool.mypy.overrides]]
module = [
  "whisper.decoding",
  "whisper.normalizers.english",
  "whisper.audio",
  "whisper.utils",
  "whisper.timing",
  "whisper.transcribe",
  "whisper.model",
]
ignore_errors = true
